# NewNanManager-SDK

./: .env.example  README.md  RELEASE.md
csharp/: .gitignore  ComprehensiveTestProgram.cs  NewNanManager.Client.csproj  NewNanManagerClient.cs  README.md  SimpleTest.cs
csharp/ComprehensiveTest/: ComprehensiveTest.csproj  Program.cs
csharp/Examples/: BasicUsage.cs  Program.cs
csharp/Exceptions/: NewNanManagerException.cs
csharp/Http/: HttpClientBase.cs
csharp/Models/: Common.cs  Enums.cs  IP.cs  Player.cs  PlayerServer.cs  Requests.cs  Server.cs  Token.cs  Town.cs
csharp/Services/: IPService.cs  MonitorService.cs  PlayerServerService.cs  PlayerService.cs  ServerService.cs  TokenService.cs  TownService.cs
csharp/Tests/: ComprehensiveTests.cs  NewNanManager.Client.Tests.csproj
golang/: .gitignore  README.md  client.go  client_test.go  config.go  errors.go  go.mod  models.go  version.go
golang/cmd/test/: main.go
golang/modules/: ip.go  monitor.go  player.go  player_server.go  server.go  token.go  town.go  types.go
golang/utils/: error_handler.go
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/: ComprehensiveTest.kt  Main.kt  TestModularSDK.kt  TestUpdatedSDK.kt
kotlin/src/main/kotlin/com/nanmanager/bukkit/: NewNanManagerClient.kt
kotlin/src/main/kotlin/com/nanmanager/bukkit/examples/: BasicExample.kt  MinecraftPluginExample.kt
kotlin/src/main/kotlin/com/nanmanager/bukkit/exceptions/: Exceptions.kt
kotlin/src/main/kotlin/com/nanmanager/bukkit/http/: HttpClient.kt
kotlin/src/main/kotlin/com/nanmanager/bukkit/models/: Models.kt
kotlin/src/main/kotlin/com/nanmanager/bukkit/services/: BaseService.kt  IPService.kt  MonitorService.kt  PlayerServerService.kt  PlayerService.kt  ServerService.kt  TokenService.kt  TownService.kt
kotlin/src/main/kotlin/com/nanmanager/client/: NewNanManagerClient.kt
kotlin/src/main/kotlin/com/nanmanager/client/exceptions/: Exceptions.kt
kotlin/src/main/kotlin/com/nanmanager/client/models/: Models.kt
kotlin/src/main/kotlin/com/nanmanager/client/services/: BaseService.kt  IPService.kt  MonitorService.kt  PlayerServerService.kt  PlayerService.kt  ServerService.kt  TokenService.kt  TownService.kt
kotlin/src/test/kotlin/com/nanmanager/bukkit/: BasicTest.kt
python/: .gitignore  Makefile  README.md  comprehensive_test.py  create-token.py  import.py  pyproject.toml  test_sdk.py
python/data/: player_ips.json  players.json  towns.json
python/newnanmanager/: __init__.py  _version.py  client.py  config.py  exceptions.py  http_client.py  utils.py
python/newnanmanager/models/: __init__.py  common.py  enums.py  ip.py  player.py  player_server.py  requests.py  server.py  token.py  town.py
python/newnanmanager/services/: __init__.py  ip.py  monitor.py  player.py  player_server.py  server.py  token.py  town.py
typescript/: .eslintrc.js  .gitignore  FINAL_TEST_SUMMARY.md  INTEGRATION_TEST.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TEST_RESULTS.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  test-simple.js  tsconfig.json
typescript/src/: client.ts  comprehensive-test.ts  index.ts  integration-test.ts  types.ts
typescript/src/__tests__/: client.test.ts  setup.ts
typescript/src/apis/: base.ts  index.ts  monitor.ts  player.ts  server.ts  token.ts  town.ts
typescript/src/errors/: index.ts
typescript/src/examples/: basic-usage.ts
typescript/src/modules/: ip.ts  monitor.ts  player-server.ts  player.ts  server.ts  token.ts  town.ts
typescript/src/test/: integration-test.ts
typescript/src/types/: common.ts  enums.ts  index.ts  player.ts  server.ts  token.ts  town.ts
typescript/src/utils/: errorHandler.ts
